fix: correct GitHub release tag handling\

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
           echo "### HƯỚNG DẪN SỬ DỤNG 💾" >> release_description.txt
           echo "" >> release_description.txt
           echo "1. **TẢI VỀ ỨNG DỤNG**:" >> release_description.txt
-          echo "   - Tải tệp \`ChromeActivateManifestV2.exe\` từ [BẢN PHÁT HÀNH](https://github.com/${{ github.repository }}/releases) 📥." >> release_description.txt
+          echo "   - Tải tệp \`ChromeActivateManifestV2.exe\` tại [đây](https://github.com/${{ github.repository }}/releases) 📥." >> release_description.txt
           echo "" >> release_description.txt
           echo "2. **CHẠY ỨNG DỤNG VỚI QUYỀN ADMIN**:" >> release_description.txt
           echo "   - Nhấp chuột phải vào tệp \`ChromeActivateManifestV2.exe\` và chọn **\"Run as administrator\"**. ⚙️" >> release_description.txt
